[package]
name = "atlas-airdrop-vesting-cli"
version = "1.0.0"
authors = ["Hongbo Li <topstack2021a@gmail.com>"]
edition = "2021"

[workspace]

[dependencies]
anchor-client = { version="0.18.2" }
liquity = { path = "../programs/stable-pool", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
anyhow = "1.0.32"
rand = "0.8.4"
clap = "2.34.0"
solana-sdk = "1.7.11"