[package]
name = "borrower-operations"
version = "0.0.1"
description = "Solana Liquity Protocol"
authors = ["Hongbo Li"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.8"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
liquity-common = {version="0.0.1",path = "../../liquity-common/program",features = [ "no-entrypoint" ]}

[dev-dependencies]
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"

[lib]
crate-type = ["cdylib", "lib"]

